--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/git/List.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/git/List.razor
@@ -124,9 +124,13 @@
     private int _pageSize = 999;
 
     private List<GitVO> _lst = new();
+    private bool _isFirst;
 
     protected override async Task OnParametersSetAsync()
     {
+        if (_isFirst) return;
+        _isFirst = true;
+
         _lst = await _iocManager.Resolve<IGitService>().ToListAsync();
         _lst = _lst.OrderByDescending(o => o.Id).ToList();
         _totalCount = _lst.Count;
