--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/docker/hub/List.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/docker/hub/List.razor
@@ -89,9 +89,13 @@
     private int _pageSize = 999;
 
     private List<DockerHubVO> _lst = new();
+    private bool _isFirst;
 
     protected override async Task OnParametersSetAsync()
     {
+        if (_isFirst) return;
+        _isFirst = true;
+        
         _lst = await _iocManager.Resolve<IDockerHubService>().ToListAsync();
         _lst = _lst.OrderByDescending(o => o.Id).ToList();
         _totalCount = _lst.Count;
