--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/fss/client/List.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/fss/client/List.razor
@@ -102,9 +102,13 @@
     private int _pageSize = 20;
 
     private List<ClientConnectVO> _lst = new();
+    private bool _isFirst;
 
     protected override async Task OnParametersSetAsync()
     {
+        if (_isFirst) return;
+        _isFirst = true;
+
         _lst = await _iocManager.Resolve<INodeClient>().ToClientListAsync();
         if (_lst == null)
         {
