--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/fss/node/List.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/fss/node/List.razor
@@ -60,9 +60,13 @@
 @code{
 
     private Dictionary<string, DateTime> _lst = new();
+    private bool _isFirst;
 
     protected override async Task OnParametersSetAsync()
     {
+        if (_isFirst) return;
+        _isFirst = true;
+
         _lst = await _iocManager.Resolve<INodeClient>().ToNodeListAsync();
     }
 
