--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/k8s/tpl/List.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/k8s/tpl/List.razor
@@ -79,9 +79,13 @@
     private int _pageSize = 999;
 
     private List<YamlTplVO> _lst = new();
+    private bool _isFirst;
 
     protected override async Task OnParametersSetAsync()
     {
+        if (_isFirst) return;
+        _isFirst = true;
+
         _lst = await _iocManager.Resolve<IYamlTplService>().ToListAsync();
         _lst = _lst.OrderByDescending(o => o.Id).ToList();
         _totalCount = _lst.Count;
