--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/project_group/Add.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/project_group/Add.razor
@@ -48,9 +48,13 @@
     private readonly ProjectGroupVO _info = new() {ClusterIds =new()};
     private List<ClusterVO> _lstCluster = new();
     private Dictionary<int, bool> _selectCluster = new();
+    private bool _isFirst;
 
     protected override async Task OnInitializedAsync()
     {
+        if (_isFirst) return;
+        _isFirst = true;
+
         _lstCluster = await _iocManager.Resolve<IClusterService>().ToListAsync();
         _selectCluster = _lstCluster.ToDictionary(o => o.Id, o => false);
     }
