--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/k8s/single/Deploy.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/k8s/single/Deploy.razor
@@ -55,7 +55,7 @@
 
     // 集群
         _lstCluster = await _iocManager.Resolve<IClusterService>().ToListAsync();
-        _lstCluster = _lstCluster.OrderByDescending(o => o.Id).ToList();
+        _lstCluster = _lstCluster.OrderBy(o => o.Sort).ToList();
         if (_lstCluster != null) _selectClusterId = _lstCluster[0].Id;
     }
 
