--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/project_group/List.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/project_group/List.razor
@@ -93,7 +93,7 @@
         _totalCount = _lst.Count;
 
         _lstCluster = await _iocManager.Resolve<IClusterService>().ToListAsync();
-        _lstCluster = _lstCluster.OrderByDescending(o => o.Id).ToList();
+        _lstCluster = _lstCluster.OrderBy(o => o.Sort).ToList();
     }
 
     private void GotoAdd()
