--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/project_group/Update.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/project_group/Update.razor
@@ -108,6 +108,7 @@
             }
             
             _lstCluster = await _iocManager.Resolve<IClusterService>().ToListAsync();
+            _lstCluster = _lstCluster.OrderBy(o => o.Sort).ToList();
             _selectCluster = _lstCluster.ToDictionary(o => o.Id, o => false);
         }
     }
